Fix for responsive collapse button alignment.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,16 +26,6 @@ footer {
 }
 
 
-
-/* navbar */
-div.navbar-text {
-  padding: 15px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-
-
 /* ratings colors */
 .no-rating {
   color: black;
